# vibbra-system-notify

./: .env.example  .gitignore  Procfile  README.md  build.sh  pyproject.toml  render.yaml
src/apps/channels/: forms.py  urls.py
src/apps/channels/migrations/: 0001_initial.py  0002_channel_content_type_channel_name_channel_object_id_and_more.py  0003_alter_channel_channel_type_alter_channel_enabled_and_more.py
src/apps/channels/models/: __init__.py  app.py  channel.py
src/apps/channels/templates/app/: app_form.html
src/apps/channels/templates/channels/: channel_form.html  channel_list.html
src/apps/channels/templates/partials/: _modal_delete.html
src/apps/channels/tests/: test_app.py  test_channels.py
src/apps/channels/views/: __init__.py  app.py  channel.py
src/apps/email_app/: apps.py  forms.py  task.py  tasks.py  urls.py
src/apps/email_app/migrations/: 0001_initial.py  0002_emailnotification.py
src/apps/email_app/models/: __init__.py  notification.py  server.py  template.py
src/apps/email_app/templates/email_app/: email_notification_form.html  emailnotification_detail.html  emailnotification_list.html  serverconfig_form.html  template_upload_form.html
src/apps/email_app/views/: notification.py  server.py  template.py
src/apps/pages/: tests.py  urls.py
src/apps/pages/templates/: home.html
src/apps/pages/views/: home.py
src/apps/users/: admin.py  models.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py
src/setup/: asgi.py  urls.py  wsgi.py
src/setup/settings/: base.py  local.py  prod.py
src/templates/: base.html
src/templates/account/: login.html  signup.html
src/templates/includes/: scripts.html
src/templates/layouts/: navigation.html  sidebar.html
